--- a/src/Makefile
+++ b/src/Makefile
@@ -48,7 +48,7 @@ $(OTHER_SRCS): parser-sentinel
 # is changed, any compilation that depends on a generated file will cause 
 # horn to rebuild the generated files (OTHER_SRCS).
 parser-sentinel: apyc.hn
-	/Users/henrybradlow/bin/horn $<
+	horn $<
 	touch parser-sentinel
 
 ../apyc: $(OBJS) 
